# obsplay

./: .gitignore  CMakeLists.txt  LICENSE  readme.md
src/: native.cpp  native.h  obsplayui.cpp  obsplayui.h  settings.cpp  settings.h  source.cpp  source.h
ui/: obsplayui.ui
